<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/notNull"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/satellite_status" />
    
  <LinearLayout
        android:weightSum="100"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
      <TextView
        android:id="@+id/textView1"
        android:layout_weight="50"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/speed" />
    
      <TextView
        android:id="@+id/txtVuSpdKm"
        android:layout_weight="50"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/initial_speed_km" />
   </LinearLayout>
   
  <LinearLayout
        android:weightSum="100"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
     
      <TextView
        android:id="@+id/textView3"
        android:layout_weight="50"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/distance" />
     
      <TextView
        android:id="@+id/txtVuDistance"
        android:layout_weight="50"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/distanceNull" />
   </LinearLayout>
   
   <LinearLayout
        android:weightSum="100"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

       <TextView
        android:id="@+id/textView7"
        android:layout_weight="50"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/elapsedTime" />

       <TextView
        android:id="@+id/tvTimer"
        android:layout_weight="50"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/timeNull" />
   </LinearLayout>
   
   <LinearLayout
        android:weightSum="100"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
       <TextView
        android:id="@+id/textView5"
        android:layout_weight="50"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/avSpeed" />

       <TextView
        android:id="@+id/tvAvr"
        android:layout_weight="50"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/initial_speed_km" />
   </LinearLayout>
   
   <LinearLayout
        android:weightSum="100"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

       <TextView
         android:id="@+id/textView4"
         android:layout_weight="50"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/maxSpeed" />

       <TextView
        android:id="@+id/txtVuMaxSpeed"
        android:layout_weight="50"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/initial_speed_km" />
   </LinearLayout>     
      
   <LinearLayout
        android:weightSum="100"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" > 
        
       <TextView
        android:id="@+id/textView2"
        android:layout_weight="50"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/altitude" />

       <TextView
        android:id="@+id/tVAltitude"
        android:layout_weight="50"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/altNull" />
   </LinearLayout>

   <LinearLayout
        android:weightSum="100"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
       <TextView
        android:id="@+id/textView6"
        android:layout_weight="50"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/totAscent" />

       <TextView
        android:id="@+id/tvAscent"
        android:layout_weight="50"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/altNull" />
   </LinearLayout>

   <LinearLayout
        android:weightSum="100"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        

        <TextView
        android:id="@+id/currentLat"
        android:layout_weight="50"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="0" />

       <TextView
        android:id="@+id/currentLon"
        android:layout_weight="50"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="0" />
   </LinearLayout>
   

    
</LinearLayout>
          
    