<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >


<fragment android:id="@+id/map"
          android:layout_width="match_parent"
          android:layout_height="200dp"
          android:name="com.google.android.gms.maps.MapFragment"/>

<TextView
   android:id="@+id/textView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/map"
    android:layout_below="@+id/map"
    android:layout_marginTop="29dp"
    android:text="@string/speed" />

<TextView
    android:id="@+id/txtVuDistance"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/txtVuSpdKm"
    android:layout_centerHorizontal="true"
    android:textSize="20dp"
    android:text="@string/distanceNull" />

<TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/txtVuSpdKm"
    android:layout_centerHorizontal="true"
    android:text="@string/distance" />

<TextView
    android:id="@+id/txtVuSpdKm"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/textView1"
    android:layout_below="@+id/textView1"
    android:textSize="20dp"
    android:text="@string/initial_speed_km" />

<TextView
    android:id="@+id/txtVuMaxSpeed"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/tvAvr"
    android:layout_alignBottom="@+id/tvAvr"
    android:layout_alignLeft="@+id/txtVuDistance"
    android:textSize="20dp"
    android:text="@string/initial_speed_km" />

<Button
    android:id="@+id/btnStart"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:text="Start" />

<TextView
    android:id="@+id/tvAscent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/txtVuMaxSpeed"
    android:layout_alignBottom="@+id/txtVuMaxSpeed"
    android:layout_alignRight="@+id/textView6"
    android:textSize="20dp"
    android:text="@string/altNull" />

<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/textView3"
    android:layout_alignBottom="@+id/textView3"
    android:layout_alignRight="@+id/map"
    
    android:text="@string/elapsedTime" />

<TextView
    android:id="@+id/tvTimer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/textView4"
    android:layout_alignLeft="@+id/textView6"
    android:text="@string/timeNull"
    android:textSize="20dp" />

<TextView
    android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/txtVuSpdKm"
    android:layout_below="@+id/txtVuSpdKm"
    android:layout_marginTop="32dp"
    android:text="@string/avSpeed" />

<TextView
    android:id="@+id/textView5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/textView4"
    android:layout_alignBottom="@+id/textView4"
    android:layout_alignLeft="@+id/textView3"
    android:text="@string/maxSpeed" />

<TextView
    android:id="@+id/textView6"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/tvAvr"
    android:layout_alignRight="@+id/textView2"
    android:text="@string/totAscent" />

<TextView
    android:id="@+id/tvAvr"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/textView4"
    android:layout_below="@+id/textView4"
    android:text="@string/initial_speed_km"
    android:textSize="20dp" />

<Button
    android:id="@+id/btnPause"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/btnStart"
    android:layout_alignBottom="@+id/btnStart"
    android:layout_centerHorizontal="true"
    android:text="Pause" />

<Button
    android:id="@+id/btnStop"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/btnPause"
    android:layout_alignBottom="@+id/btnPause"
    android:layout_alignRight="@+id/tvTimer"
    android:text="Stop" />
      
</RelativeLayout>          
    